--- a/index.html
+++ b/index.html
@@ -52,41 +52,10 @@
 	</head>
 
 	<body v-cloak>
-
-		<!-- header -->
-		<nav class="navbar navbar-fixed-top navbar-light bg-faded">
-	    <div class="container">
-	        <a class="navbar-brand text-center" href="#/">
-						<img src="assets/vuestrap-logo.svg" alt="Vuestrap logo">
-					</a>
-					<a class="navbar-brand text-center" href="#/">
-						Documentation
-					</a>
-					<ul class="nav navbar-nav pull-right">
-						<li class="nav-item">
-							<a href="#/" class="btn">Introduction</a>
-						</li>
-						<li class="nav-item">
-							<a href="{{pkg.homepage}}" class="btn btn-success" target="_blank">Github</a>
-						</li>
-					</ul>
-	    </div><!-- /.container -->
-	  </nav><!-- /.navbar -->
-
-		<!-- content -->
-		<div class="container">
-			<div class="row row-offcanvas row-offcanvas-right">
-				<div class="col-xs-12 col-sm-9">
-					<component :is="currentView"></component>
-		    </div><!-- /col-xs-12 -->
-
-				<!-- sidebar -->
-				<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-					<docs-search :list="demoPages" :current-view="currentView"></docs-search>
-				</div><!--/sidebar-->
-
-			</div><!--/row-->
-		</div><!--/container-->
+		
+		<div id="docs">
+			<docs-pages :routes="routes"></docs-pages>
+		</div>
 		
 		<!-- footer -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.min.js"></script>
