add support for page title

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 				line-height: 3em;
 			}
 			.navbar-brand {
-				padding: 0 !important;;
+				padding: 0 !important;
 			}
-			.navbar-brand img{
+			.navbar-brand img {
 				height: 2.5em;
 			}
 			[v-cloak] {
