add overflow on body to fix scrolling issue on mobiles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- main vue app -->
-<html lang="en"  id="docs">
+<html lang="en" id="docs">
 	<head>
 		<title v-text="pageTitle">Vuestrap Docs</title>
 		<meta charset="utf-8">
@@ -20,6 +20,7 @@
 			body {
 				margin: auto;
 				padding: 0;
+				overflow-x: hidden;
 			}
 			h1, h2, h3 {
 				font-family: 'Source Sans Pro', sans-serif;
