move global styles to docs.scss

--- a/index.html
+++ b/index.html
@@ -9,65 +9,11 @@
 		<link href="assets/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/tomorrow.min.css">
-
-		<style>
-			html, body {
-				height: 100%;
-			}
-			html {
-				font-size: 16px;
-			}
-			body {
-				margin: auto;
-				padding: 0;
-			}
-			h1, h2, h3 {
-				font-family: 'Source Sans Pro', sans-serif;
-				color: #563d7c;
-			}
-			h2 {
-				padding-bottom: 0.3rem;
-				border-bottom: 1px solid #42b983;
-			}
-			h3 {
-				font-size: 1.3rem !important;
-			}
-			#docs-pages > .navbar {
-				padding: 0.2em 0 !important;
-				line-height: 3em;
-			}
-			#docs-pages > .navbar .navbar-brand {
-				padding: 0 !important;
-			}
-			#docs-pages > .navbar .navbar-brand img {
-				height: 2.5em;
-			}
-			#docs-pages > .container {
-				padding-top: 5em;
-			}
-			[v-cloak] {
-				display: none;
-			}
-			.list-group-item.active {
-				color: #42b983 !important;
-				border-color: #42b983 !important;
-				background-color: transparent !important;
-			}
-			/* offcanvas menu */
-			.navbar a.list-group-item {
-			  width: 100%;
-			  color: #C5C5C5;
-			  text-align: inherit;
-			  background-color: rgba(255, 255, 255, 0);
-  			border: 1px solid rgba(221, 221, 221, 0.04);
-  			border-right: 0;
-			  border-left: 0;
-			}
-		</style>
 	</head>
 
 	<body v-cloak>
 		
+		<!-- offcanvas wrapper -->
 		<vs-offcanvas-wrapper id="main" animation="ease" align="right">
 
 			<vs-offcanvas-drawer>
