--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link href="assets/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/tomorrow.min.css">
+		<link rel="stylesheet" href="dist/vuestrap.min.css">
 		<style>
 			[v-cloak] {
 			  display: none;
@@ -21,33 +22,13 @@
 		<vs-offcanvas-wrapper id="main" animation="ease" align="right">
 
 			<vs-offcanvas-drawer>
-				<!-- drawer with navbar -->
-				<div class="navbar navbar-collapse navbar-dark navbar-primary bg-inverse navbar-static-top navbar-full navbar-offcanvas-drawer">
-					<a href="{{pkg.homepage}}" class="btn btn-success pull-left" target="_blank" v-on:click="$root.$broadcast('toggle::offcanvas-drawer', 'main')">
-			    	&#9733; Github
-			    </a>
-			    <!-- close button -->
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close" v-on:click="$root.$broadcast('toggle::offcanvas-drawer', 'main')">
-		        <span aria-hidden="true">×</span>
-		        <span class="sr-only">Close</span>
-			    </button>
-			    <div class="m-b clearfix"></div>
-			    <div class="list-group list-group-flush">
-					  <a href="#{{item.url}}" 
-					    v-bind:class="{
-					      'list-group-item': true, 
-					    }" 
-					    v-for="item in routes"
-					    v-on:click="$root.$broadcast('toggle::offcanvas-drawer', 'main')">
-					    {{item.title}}
-					  </a>
-					</div>
-			  </div>
+				<!-- mobile drawer with navbar -->
+				<vs-docs-drawer :routes="routes" :pkg="pkg"></vs-docs-drawer>
 			</vs-offcanvas-drawer>
 
-			<!-- content -->
+			<!-- desktop content -->
 			<div id="docs-pages">
-				<docs-pages :routes="routes" :page-title.sync="pageTitle"></docs-pages>
+				<vs-docs-pages :routes="routes" :page-title.sync="pageTitle" :pkg="pkg"></vs-docs-pages>
 			</div>
 
 		</vs-offcanvas-wrapper>
